--- a/prototype_01/index.html
+++ b/prototype_01/index.html
@@ -17,6 +17,7 @@
     <script src="components/phase-shift.js"></script>
     <script src="components/jour-bouton.js"></script>
     <script src="components/bouton-reset-cubes.js"></script>
+  <!--  <script src="components/bouton-generate.js"></script> -->
     <script src="components/horloge.js"></script>
   </head>
   <body>
@@ -38,6 +39,7 @@
         <a-mixin id="btn0" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/0.png"></a-mixin>
         <a-mixin id="btn-ok" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/ok.png"></a-mixin>
         <a-mixin id="btn-reset" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/reset.png"></a-mixin>
+        <a-mixin id="btn-generate" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/graph/generate.png"></a-mixin>
 
         <!-- Pour les mois -->
         <a-mixin id="cubeMois" geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
@@ -158,7 +160,7 @@
       </a-entity>
 
       <!-- Horloge -->
-      <a-entity id="horloge" horloge data-heure-choisisse="12" geometry="primitive: cylinder; radius:0.59; height:0.05;" scale="0.8 0.8 0.8" position="3 1.5 0" material="color:#FFFFFF;" rotation="90 270 0">
+      <a-entity id="horloge" horloge data-heure-choisisse="12" geometry="primitive: cylinder; radius:0.55; height:0.05;" scale="0.8 0.8 0.8" position="1.5 1.5 -1" material="color:#FFFFFF;" rotation="90 270 0">
         <a-entity id="monAiguille" ui-rotary></a-entity>
         <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
@@ -175,6 +177,126 @@
           <a-entity  text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388"></a-entity>
           <a-entity  text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462"></a-entity>
         </a-entity>
+      </a-entity>
+
+      <!-- Le graphe et son bouton -->
+      <a-entity id="graph" position="0 0 1">
+
+        <!-- Le bouton -->
+        <a-entity geometry="primitive:box;width: 0.3; depth: 0.3" material="color:#ffffff" position="0 0.5 0" rotation="0 270 0">
+          <a-entity bouton-generate position="0 0.5 0" ui-button="baseColor: #ffffff;top:btn-generate;pressed:btn-generate,offset"></a-entity>
+        </a-entity>
+
+        <!-- le graphe -->
+        <a-entity position="0 0 4" scale="2 2 2" rotation="0 90 0">
+
+          <!-- Lignes blanches -->
+          <a-entity>
+            <a-entity line__a="start: -.8, 0.25, .8;  end: -.8 0.25 -.8; color: white"
+                      line__b="start: -.8, 0.5, .8;  end: -.8 0.5 -.8; color: white"
+                      line__c="start: -.8, 0.75, .8; end: -.8 0.75 -.8; color: white"
+                      line__d="start: -.8, 1, .8;    end: -.8 1 -.8; color: white"
+                      line__e="start: -.8, 0.25, -.8;  end: .8 0.25 -.8; color: white"
+                      line____f="start: -.8, 0.5, -.8;  end: .8 0.5 -.8; color: white"
+                      line__g="start: -.8, 0.75, -.8; end: .8 0.75 -.8; color: white"
+                      line__h="start: -.8, 1, -.8;    end: .8 1 -.8; color: white"
+                      line__i="start: .8, 0.25, .8; end: .8 0.25 -.8; color: white"
+                      line__j="start: .8, 0.5, .8; end: .8 0.5 -.8; color: white"
+                      line__k="start: .8, 0.75, .8; end: .8 0.75 -.8; color: white"
+                      line__l="start: .8, 1, .8; end: .8 1 -.8; color: white"></a-entity>
+            <a-text value="0.25"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.25"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="0.5"  color="white"  width="5" wrap-count="180"  position="-.8, 0.5, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.5"  color="white"  width="5" wrap-count="180"  position="-.8, 0.5, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="0.75"  color="white"  width="5" wrap-count="180"  position="-.8, 0.75, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.75"  color="white"  width="5" wrap-count="180"  position="-.8, 0.75, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="1"  color="white"  width="5" wrap-count="180"  position="-.8, 1, 1" rotation="0 90 0" ></a-text>
+            <a-text value="1"  color="white"  width="5" wrap-count="180"  position="-.8, 1, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="Percentage of Bachelors accorded to Women"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1.2" rotation="0 90 90" ></a-text>
+            <a-text value="Percentage of Bachelors accorded to Women"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1.2" rotation="0 -90 90" ></a-text>
+          </a-entity>
+
+          <!-- Ligne noir au sol -->
+          <a-entity>
+            <a-entity line__a="start: -.8, 0.05, -.8; end: .8 0.05 -.8; color: black"
+                      line__b="start: -.8, 0.05, -.7; end: .8 0.05 -.7; color: black"
+                      line__c="start: -.8, 0.05, -.6; end: .8 0.05 -.6; color: black"
+                      line__d="start: -.8, 0.05, -.5; end: .8 0.05 -.5; color: black"
+                      line__e="start: -.8, 0.05, -.4; end: .8 0.05 -.4; color: black"
+                      line__f="start: -.8, 0.05, -.3; end: .8 0.05 -.3; color: black"
+                      line__g="start: -.8, 0.05, -.2; end: .8 0.05 -.2; color: black"
+                      line__h="start: -.8, 0.05, -.1; end: .8 0.05 -.1; color: black"
+                      line__i="start: -.8, 0.05, 0;   end: .8 0.05 0;   color: black"
+                      line__j="start: -.8, 0.05, .8; end: .8 0.05 .8; color: black"
+                      line__k="start: -.8, 0.05, .7; end: .8 0.05 .7; color: black"
+                      line__l="start: -.8, 0.05, .6; end: .8 0.05 .6; color: black"
+                      line__m="start: -.8, 0.05, .5; end: .8 0.05 .5; color: black"
+                      line__n="start: -.8, 0.05, .4; end: .8 0.05 .4; color: black"
+                      line__o="start: -.8, 0.05, .3; end: .8 0.05 .3; color: black"
+                      line__p="start: -.8, 0.05, .2; end: .8 0.05 .2; color: black"
+                      line__q="start: -.8, 0.05, .1; end: .8 0.05 .1; color: black"
+                      line__r="start: -.8, 0.05, -.8;  end: -.8 0.05 .8; color: black"
+                      line__s="start: -.7, 0.05, -.8;  end: -.7 0.05 .8; color: black"
+                      line__t="start: -.6, 0.05, -.8;  end: -.6 0.05 .8; color: black"
+                      line__u="start: -.5, 0.05, -.8;  end: -.5 0.05 .8; color: black"
+                      line__v="start: -.4, 0.05, -.8;  end: -.4 0.05 .8; color: black"
+                      line__w="start: -.3, 0.05, -.8;  end: -.3 0.05 .8; color: black"
+                      line__y="start: -.2, 0.05, -.8;  end: -.2 0.05 .8; color: black"
+                      line__z="start: -.1, 0.05, -.8;  end: -.1 0.05 .8; color: black"
+                      line__aa="start: 0, 0.05, -.8;    end: 0 0.05 .8; color: black"
+                      line__ba="start: .8, 0.05, -.8;  end: .8 0.05 .8; color: black"
+                      line__ca="start: .7, 0.05, -.8;  end: .7 0.05 .8; color: black"
+                      line__da="start: .6, 0.05, -.8;  end: .6 0.05 .8; color: black"
+                      line__ea="start: .5, 0.05, -.8;  end: .5 0.05 .8; color: black"
+                      line__fa="start: .4, 0.05, -.8;  end: .4 0.05 .8; color: black"
+                      line__ga="start: .3, 0.05, -.8;  end: .3 0.05 .8; color: black"
+                      line__ha="start: .2, 0.05, -.8;  end: .2 0.05 .8; color: black"
+                      line__ja="start: .1, 0.05, -.8;  end: .1 0.05 .8; color: black"</a-entity>
+          </a-entity>
+
+          <!-- Le texte pour diamètre -->
+          <a-entity>
+            <a-text value="1970" color="white" width="5" wrap-count="180" position="-.95 .03 .8" rotation="-90 0 0" ></a-text>
+            <a-text value="1972" color="white" width="5" wrap-count="180" position="-.95 .03 .72" rotation="-90 0 0" ></a-text>
+            <a-text value="1974" color="white" width="5" wrap-count="180" position="-.95 .03 .64" rotation="-90 0 0" ></a-text>
+            <a-text value="1976" color="white" width="5" wrap-count="180" position="-.95 .03 .56" rotation="-90 0 0" ></a-text>
+            <a-text value="1978" color="white" width="5" wrap-count="180" position="-.95 .03 .48" rotation="-90 0 0" ></a-text>
+            <a-text value="1980" color="white" width="5" wrap-count="180" position="-.95 .03 .42" rotation="-90 0 0" ></a-text>
+            <a-text value="1982" color="white" width="5" wrap-count="180" position="-.95 .03 .34" rotation="-90 0 0" ></a-text>
+            <a-text value="1984" color="white" width="5" wrap-count="180" position="-.95 .03 .26" rotation="-90 0 0" ></a-text>
+            <a-text value="1986" color="white" width="5" wrap-count="180" position="-.95 .03 .18" rotation="-90 0 0" ></a-text>
+            <a-text value="1988" color="white" width="5" wrap-count="180" position="-.95 .03 .1" rotation="-90 0 0" ></a-text>
+            <a-text value="1990" color="white" width="5" wrap-count="180" position="-.95 .03 .02" rotation="-90 0 0" ></a-text>
+            <a-text value="1992" color="white" width="5" wrap-count="180" position="-.95 .03 -.06" rotation="-90 0 0" ></a-text>
+            <a-text value="1994" color="white" width="5" wrap-count="180" position="-.95 .03 -.14" rotation="-90 0 0" ></a-text>
+            <a-text value="1996" color="white" width="5" wrap-count="180" position="-.95 .03 -.22" rotation="-90 0 0" ></a-text>
+            <a-text value="1998" color="white" width="5" wrap-count="180" position="-.95 .03 -.3" rotation="-90 0 0" ></a-text>
+            <a-text value="2000" color="white" width="5" wrap-count="180" position="-.95 .03 -.38" rotation="-90 0 0" ></a-text>
+            <a-text value="2002" color="white" width="5" wrap-count="180" position="-.95 .03 -.46" rotation="-90 0 0" ></a-text>
+            <a-text value="2004" color="white" width="5" wrap-count="180" position="-.95 .03 -.54" rotation="-90 0 0" ></a-text>
+            <a-text value="2006" color="white" width="5" wrap-count="180" position="-.95 .03 -.62" rotation="-90 0 0" ></a-text>
+            <a-text value="2008" color="white" width="5" wrap-count="180" position="-.95 .03 -.7" rotation="-90 0 0" ></a-text>
+            <a-text value="2010" color="white" width="5" wrap-count="180" position="-.95 .03 -.8" rotation="-90 0 0" ></a-text>
+            <a-text value="Academic Year" color="white"  width="5" wrap-count="180"  position="-1.1 .03 .19" rotation="-90 90 0" ></a-text>
+          </a-entity>
+
+          <!-- Le sol et la bordure -->
+          <a-box depth="2.3" height=".1" width="2.3" opacity="1" color="#333333" position="0 -.02 0"></a-box>
+          <a-box depth="1.6" height=".07" width="1.6" opacity="1" color="white" position="0 0 0"></a-box>
+
+          <a-entity>
+            <a-text value="Departement" color="white" width="8" wrap-count="180" position="-.2 .03 1.25" rotation="-90 0 0"></a-text>
+            <a-text value="Agriculture" color="red" width="5" wrap-count="180" position="-.7 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Business" color="lightblue" width="5" wrap-count="180" position="-.45 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Architecture" color="yellow" width="5" wrap-count="180" position="-.2 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Computer" color="green" width="5" wrap-count="180" position=".1 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Science" color="green" width="5" wrap-count="180" position=".15 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Physical" color="blue" width="5" wrap-count="180" position=".4 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Sciences" color="blue" width="5" wrap-count="180" position=".45 .03 .9" rotation="-90 -90 0"></a-text>
+            <a-text value="Engineering" color="orange" width="5" wrap-count="180" position=".7 .03 .9" rotation="-90 -90 0"></a-text> 
+          </a-entity>
+        </a-entity>
+
       </a-entity>
 
 
