--- a/prototype_01/index.html
+++ b/prototype_01/index.html
@@ -17,7 +17,7 @@
     <script src="components/phase-shift.js"></script>
     <script src="components/jour-bouton.js"></script>
     <script src="components/bouton-reset-cubes.js"></script>
-  <!--  <script src="components/bouton-generate.js"></script> -->
+    <script src="components/bouton-generate.js"></script>
     <script src="components/horloge.js"></script>
   </head>
   <body>
@@ -160,7 +160,7 @@
       </a-entity>
 
       <!-- Horloge -->
-      <a-entity id="horloge" horloge data-heure-choisisse="12" geometry="primitive: cylinder; radius:0.55; height:0.05;" scale="0.8 0.8 0.8" position="1.5 1.5 -1" material="color:#FFFFFF;" rotation="90 270 0">
+      <a-entity id="horloge" horloge data-heure-choisisse="" geometry="primitive: cylinder; radius:0.59; height:0.045;" scale="0.8 0.8 0.8" position="1.5 1.5 -1" material="color:#FFFFFF;" rotation="90 270 0">
         <a-entity id="monAiguille" ui-rotary></a-entity>
         <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
@@ -184,7 +184,7 @@
 
         <!-- Le bouton -->
         <a-entity geometry="primitive:box;width: 0.3; depth: 0.3" material="color:#ffffff" position="0 0.5 0" rotation="0 270 0">
-          <a-entity bouton-generate position="0 0.5 0" ui-button="baseColor: #ffffff;top:btn-generate;pressed:btn-generate,offset"></a-entity>
+          <a-entity data-pret-generate="false" bouton-generate position="0 0.5 0" ui-button="baseColor: #ffffff;top:btn-generate;pressed:btn-generate,offset"></a-entity>
         </a-entity>
 
         <!-- le graphe -->
@@ -251,7 +251,7 @@
                       line__fa="start: .4, 0.05, -.8;  end: .4 0.05 .8; color: black"
                       line__ga="start: .3, 0.05, -.8;  end: .3 0.05 .8; color: black"
                       line__ha="start: .2, 0.05, -.8;  end: .2 0.05 .8; color: black"
-                      line__ja="start: .1, 0.05, -.8;  end: .1 0.05 .8; color: black"</a-entity>
+                      line__ja="start: .1, 0.05, -.8;  end: .1 0.05 .8; color: black"></a-entity>
           </a-entity>
 
           <!-- Le texte pour diamètre -->
@@ -281,20 +281,16 @@
           </a-entity>
 
           <!-- Le sol et la bordure -->
-          <a-box depth="2.3" height=".1" width="2.3" opacity="1" color="#333333" position="0 -.02 0"></a-box>
-          <a-box depth="1.6" height=".07" width="1.6" opacity="1" color="white" position="0 0 0"></a-box>
-
           <a-entity>
-            <a-text value="Departement" color="white" width="8" wrap-count="180" position="-.2 .03 1.25" rotation="-90 0 0"></a-text>
-            <a-text value="Agriculture" color="red" width="5" wrap-count="180" position="-.7 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Business" color="lightblue" width="5" wrap-count="180" position="-.45 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Architecture" color="yellow" width="5" wrap-count="180" position="-.2 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Computer" color="green" width="5" wrap-count="180" position=".1 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Science" color="green" width="5" wrap-count="180" position=".15 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Physical" color="blue" width="5" wrap-count="180" position=".4 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Sciences" color="blue" width="5" wrap-count="180" position=".45 .03 .9" rotation="-90 -90 0"></a-text>
-            <a-text value="Engineering" color="orange" width="5" wrap-count="180" position=".7 .03 .9" rotation="-90 -90 0"></a-text> 
+            <a-box depth="2.3" height=".1" width="2.3" opacity="1" color="#333333" position="0 -.02 0"></a-box>
+            <a-box depth="1.6" height=".07" width="1.6" opacity="1" color="white" position="0 0 0"></a-box>
           </a-entity>
+
+          <!-- La ligne du graphe -->
+          <a-entity id="ligneGraphe">
+
+          </a-entity>
+
         </a-entity>
 
       </a-entity>
