--- a/telekinesie/index.html
+++ b/telekinesie/index.html
@@ -2,17 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PROTOTYPE - 24/01/2018</title>
-    <meta name ="description" content="PROTOTYPE - 24/01/2018 - A-Frame">
+    <title>Télékinésie</title>
+    <meta name ="description" content="Télékinésie - A-Frame">
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
     <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
-    <!--<script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>-->
-    <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
+    <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
     <script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
-    <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
+    <!--<script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>-->
     <script src="components/ui-widget.js"></script>
     <script src="components/lecture-cube.js"></script>
     <script src="components/phase-shift.js"></script>
@@ -28,27 +27,14 @@
         <!-- Pour les boutons  -->
         <a-mixin id="bouton" jour-bouton ui-button="pressedColor: #808080; color: #000000; baseColor: #ffffff;"></a-mixin>
         <a-mixin id="offset" position="0 0.01 0"></a-mixin>
-        <a-mixin id="btn1" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/1.png"></a-mixin>
-        <a-mixin id="btn2" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/2.png"></a-mixin>
-        <a-mixin id="btn3" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/3.png"></a-mixin>
-        <a-mixin id="btn4" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/4.png"></a-mixin>
-        <a-mixin id="btn5" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/5.png"></a-mixin>
-        <a-mixin id="btn6" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/6.png"></a-mixin>
-        <a-mixin id="btn7" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/7.png"></a-mixin>
-        <a-mixin id="btn8" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/8.png"></a-mixin>
-        <a-mixin id="btn9" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/9.png"></a-mixin>
-        <a-mixin id="btn0" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/0.png"></a-mixin>
-        <a-mixin id="btn-ok" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/ok.png"></a-mixin>
         <a-mixin id="btn-reset" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/jour/reset.png"></a-mixin>
         <a-mixin id="btn-generate" geometry="primitive: cylinder; radius: 0.1; height: 0.025; segmentsHeight: 1;" position="0 0.02 0" material="src:img/graph/generate.png"></a-mixin>
 
         <!-- Pour les mois -->
         <a-mixin id="cubeMois" geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
-                 grabbable hoverable draggable dynamic-body shadow
+                 grabbable hoverable draggable dynamic-body stretchable shadow
                  event-set__hover-start="material.opacity: 0.7"
-                 event-set__hover-end="material.opacity: 1.0"
-                 event-set__grab-start="_target:#bouton-reset-cubes;bouton-reset-cubes.enabled:false;"
-                 event-set__grab-end="_target:#bouton-reset-cubes;bouton-reset-cubes.enabled:true;"></a-mixin>
+                 event-set__hover-end="material.opacity: 1.0"></a-mixin>
         <a-mixin id="lecteurCube" droppable static-body
                  collision-filter="collisionForces: false"
                  geometry="primitive: box; width: 0.5; height: 0.5; depth: 0.5"
@@ -60,7 +46,18 @@
                  static-body="shape: sphere; sphereRadius: 0.02"
                  super-hands="colliderEvent: collisions; colliderEventProperty: els;
                               colliderEndEvent: collisions; colliderEndEventProperty: clearedEls;
-                              colliderState:"></a-mixin>
+                              colliderState: ;grabStartButtons:triggerdown;grabEndButtons:triggerUp;"></a-mixin>
+        <a-mixin id="mypoint" raycaster="showLine:true;far:100;interval:25;"
+               super-hands="colliderEvent:raycaster-intersection;
+                            colliderEventProperty:els;
+                            colliderEndEvent:raycaster-intersection-cleared;
+                            colliderEndEventProperty:el;
+                            dragDropEndButtons: triggerup;
+                            dragDropStartButtons: triggerdown;
+                            stretchEndButtons: triggerup;
+                            stretchStartButtons: triggerdown;
+                            grabEndButtons: triggerup;
+                            grabStartButtons: triggerdown;"></a-mixin>
         <!-- Les textures des mois -->
         <img id="jan" src="img/mois/jan.png">
         <img id="feb" src="img/mois/feb.png">
@@ -89,38 +86,14 @@
       </a-assets>
 
       <!-- Les mains et la camera -->
-      <a-entity id="cameraRig" progressive-controls="objects: .cube; touchMixin: mytouch; override: true; controllerModel:false">
+      <a-entity id="cameraRig" progressive-controls="maxLevel:point; objects: .cube, #graph;controllerModel:false;pointMixin:mypoint;">
         <a-entity id="head" camera="far:1000" wasd-controls look-controls></a-entity>
-        <a-entity id="left-hand"
+        <a-entity id="lhand"
                   teleport-controls="cameraRig: #cameraRig;
                                      teleportOrigin: #head;
                                      type:parabolic;"
                                      hand-controls="left"></a-entity>
-        <a-entity id="right-hand" hand-controls="right" controller-cursor></a-entity>
-      </a-entity>
-
-      <!-- Selecteur jour -->
-      <a-entity id="selecteurJour" scale="0.8 0.8 0.8" position="0 0.5 -3" rotation="45 0 0">
-        <!-- Les boutons -->
-        <a-entity geometry="primitive:box;depth:1.28;height:0.25;width:1.75;"
-                  material="color:#FFFFFF;" position="-0.25 0.129 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="1" ui-button="top:btn1;pressed:btn1,offset"position="-0.813 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="4" ui-button="top:btn4;pressed:btn4,offset" position="-0.813 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="7" ui-button="top:btn7;pressed:btn7,offset" position="-0.813 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="2" ui-button="top:btn2;pressed:btn2,offset" position="-0.4375 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="5" ui-button="top:btn5;pressed:btn5,offset" position="-0.4375 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="8" ui-button="top:btn8;pressed:btn8,offset" position="-0.4375 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="3" ui-button="top:btn3;pressed:btn3,offset" position="-0.0625 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="6" ui-button="top:btn6;pressed:btn6,offset" position="-0.0625 0.263 0"></a-entity>
-        <a-entity mixin="bouton" data-btn="9" ui-button="top:btn9;pressed:btn9,offset" position="-0.0625 0.263 -0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="0" ui-button="top:btn0;pressed:btn0,offset" position="0.3125 0.263 0.375"></a-entity>
-        <a-entity mixin="bouton" data-btn="ok" position="0.3125 0.263 0" ui-button="top:btn-ok;pressed:btn-ok,offset"></a-entity>
-        <a-entity mixin="bouton" data-btn="reset" position="0.3125 0.263 -0.375" ui-button="top:btn-reset;pressed:btn-reset,offset"></a-entity>
-        <!-- Le texte -->
-        <a-entity rotation="-45 0 0" position="0 -0.13 0">
-          <a-entity id="ecranJour" position="-0.25 1.883 -1" data-jour-choisi="" geometry="radius:1.44;phiStart:180;phiLength:180;primitive:sphere" material="side:back" text__t="width:1.98;wrapCount:6.5;value:Day :  ;color:red;"></a-entity>
-          <a-entity position="-0.25 1.201 -1" text__t="wrapCount:28;value:\nYou can't have more than two numbers.\nPress 'Ok' to continue \nor press 'Reset' to enter new day;width:1.98;align:center"></a-entity>
-      </a-entity>
+        <a-entity id="rhand" hand-controls="right"></a-entity>
       </a-entity>
 
       <!-- Les cubes pour choisir le mois -->
@@ -181,7 +154,9 @@
       </a-entity>
 
       <!-- Le graphe et son bouton -->
-      <a-entity id="graph" position="0 0 1">
+      <a-entity id="graph" position="0 0 1"stretchable grabbable
+hoverable
+draggable>
 
         <!-- Le bouton -->
         <a-entity geometry="primitive:box;width: 0.3; depth: 0.3" material="color:#ffffff" position="0 0.5 0" rotation="0 270 0">
@@ -289,12 +264,8 @@
 
           <!-- La ligne du graphe -->
           <a-entity id="ligneGraphe"></a-entity>
-
         </a-entity>
-
       </a-entity>
-
-
 
       <!-- Collider du sol pour empêcher les blocs de tomber -->
       <a-box static-body width=100 height=0.001 depth=100 visible="false"></a-box>
